Fix CTA text alignment, fix background image bug on secondary layout

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -28,6 +28,7 @@
 	color: #e9e9e9;
 	background-color: #ff8800;
 	letter-spacing: 0.5rem;
+	text-align: center;
 	padding-top: 16px;
 	padding-bottom: 16px;
 	padding-left: 48px;
